--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <h1>Hi my name is Igor</h1>
+    <h1>Hello World</h1>
 </body>
 </html>
